--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
         <title>React movie app</title>
     </head>
     <body>
-        <header id="root" class="main-header"></div>
+        <div id="app"></div>
     </body>
 </html>
