--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,29 @@
         <meta charset="utf-8" />
 		<meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
         <title>React movie app</title>
+
+        <style>
+            body {
+            margin: 0;
+            background-color: #232323;
+            }
+
+            body * {
+            box-sizing: border-box;
+            font-family: 'SourceSans';
+            }
+
+            p {
+            padding: 0;
+            margin: 0;
+            }
+
+            #app {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            }
+        </style>
     </head>
     <body>
         <div id="app"></div>
